[package]
name = "flipfile"
version = "0.2.0"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Flip the bytes in multiple files"
license = "MIT"
edition = "2018"
keywords = ["cli", "data"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
memmap = { version = "0.7.0", optional = true }
structopt = "0.3.23"

[dev-dependencies]
tempfile = "3.2.0"

[package.metadata.release]
no-dev-version = true
